# applecider

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  baselineCLS_runtime_config.toml  hyrax_baselineCLS.ipynb  pyproject.toml  requirement.txt
.github/ISSUE_TEMPLATE/: 1-bug_report.md  README.md
.github/workflows/: build-documentation.yml  pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
AppleCider/: default_config.toml  max_config.toml  run_baselineCLS.py
AppleCider/core/: dataset.py  model.py
AppleCider/datasets/hyrax_datasets/: dataloader3_reference.py  image_and_metadata_dataset.py
AppleCider/hyrax_datasets/: spectra_dataset.py
AppleCider/models/: AstroMiNN.py  BTSModel.py  BaselineCLS.py  GalSpecNet.py  Informer.py  MetaModel.py  SpectraNetRedshift.py
AppleCider/models/hyrax_models/: HyraxBaselineCLS.py  astrominn.py  default_config.toml  photo_dataset.py  spectranet.py
AppleCider/models/other models/: Informer.py  MetaModel.py  SpectraConvNeXtBase_train.py  SpectraViTBase.py
AppleCider/preprocess/: alert_processor.py  data_loader.py  data_loader_redshift.py  data_preprocessor.py  photometry_processor.py  process.py  transient_dataset.py  utils.py  utils_redshift.py
_archive/: README.md
_archive/AppleCider/: train_utils.py  utils.py
_archive/AppleCider/core/: dataset.py  model.py  trainer.py
_archive/AppleCider/models/: AstroMiNN.py  BaselineCLS.py  SpectraNet.py  SpectraNetRedshift.py  Time2Vec.py
_archive/AppleCider/models/hyrax_models/: HyraxBaselineCLS.py
_archive/AppleCider/models/other models/: BTSModel.py  GalSpecNet.py  Informer.py  MetaModel.py  SpectraConvNeXtBase_train.py  SpectraEfficientNetV2L.py  SpectraViTBase.py
_archive/AppleCider/preprocess/: alert_processor.py  data_loader.py  data_loader_redshift.py  data_preprocessor.py  photometry_processor.py  process.py  transient_dataset.py  utils.py  utils_redshift.py
_archive/files/: ZTF_IDs.txt
_archive/notebooks/: 001-data-preprocessing.ipynb  AstroMiNN.ipynb  Spectra-Redsift_Example.ipynb  brew_cider.py  photo_t2vec_transformer_classifier.ipynb  photometry_example.ipynb
docs/: conf.py  index.rst
docs/pre_executed/: Fusion_Dataset.ipynb  preprocessing_example.ipynb
docs/pre_executed/testing/: astrominn_example.ipynb  astrominn_example_config.toml  astrominn_testing.ipynb  astrominn_testing_runtime_config.toml  baselineCLS_example.py  baseline_onnx_testing.ipynb  baselinecls_example_config.toml  baselinecls_example_runtime_config.toml  baselinecls_pretrain_runtime_config.toml  baselinecls_testing.ipynb  baselinecls_testing_runtime_config.toml  max_config.toml  run_baselineCLS.py  spectranet_testing.ipynb  spectranet_testing_runtime_config.toml
files/: cider_BTS.csv
notebooks/: 001-data-preprocessing.ipynb  Spectra-Redsift_Example.ipynb  brew_cider.py  photometry_example.ipynb
notebooks/testing/: astrominn_testing_runtime_config.toml  baselinecls_conf.toml  baselinecls_testing_runtime_config.toml  hyrax_baselineCLS.ipynb  hyrax_test.ipynb  run_baselineCLS.py
scripts/: fusion_preprocessing.py
src/applecider/: default_config.toml
src/applecider/datasets/: image_and_metadata_dataset.py  oversampler.py  oversampler_mixin.py  photo_dataset.py  spectra_dataset.py
src/applecider/models/: HyraxBaselineCLS.py  Time2Vec.py  astrominn.py  spectranet.py
src/applecider/preprocessing_utils/: preprocess_multimodal.py
tests/applecider/: test_packaging.py
