
[project]
name = "applecider"
readme = "README.md"
authors = [
    { name = "Alexandra Junell", email = "ajunell@umn.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "hyrax",
    "matplotlib",
    "numpy",
    "scikit-learn",
    "timm",
    "torch",
    "torchvision",
    "tqdm"
]

[project.urls]
"Source Code" = "https://github.com/skyportal/applecider"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "ruff", # Used for static linting of files
    "sphinx", # Used to build docs in local/dev environments
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/applecider/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
addopts = "--doctest-modules"

[tool.ruff]
line-length = 110
target-version = "py39"
extend-exclude = ["_archive"]
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # Numpy v2.0 compatibility
    "NPY201",
]
ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "UP035", # Allow typing module aliases for now
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
    "E402", # Allow deferred imports in complex scripts/modules
    "E501", # Allow long lines in model definitions and notebooks-derived files
    "E741", # Allow short variable names used for domain notation
    "F841", # Allow intermediate variables reserved for debugging/inspection
]


[tool.coverage.run]
omit=["src/applecider/_version.py"]
